--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
     </div>
     <!-- 2 Row (9, 8, 7, -) -->
     <div class = "row p-1" >
-        <div class = "col btn btnSymbol btn-outline-warning cssBox">9</div>
+        <div class = "col btn btnSymbol btn-outline-warning cssBox">7</div>
 
         <div class = "col btn btnSymbol btn-outline-warning cssBox">8</div>
 
-        <div class = "col btn btnSymbol btn-outline-warning cssBox">7</div>
+        <div class = "col btn btnSymbol btn-outline-warning cssBox">9</div>
 
         <div class = "col btn btnSymbol btn-outline-warning cssBox" >-</div>
     </div>
     <!-- 3 Row (6, 5, 4, *) -->
     <div class = "row p-1">
-        <div class = "col btn btnSymbol btn-outline-warning cssBox">6</div>
+        <div class = "col btn btnSymbol btn-outline-warning cssBox">4</div>
 
         <div class = "col btn btnSymbol btn-outline-warning cssBox">5</div>
 
-        <div class = "col btn btnSymbol btnSymbol btn-outline-warning cssBox">4</div>
+        <div class = "col btn btnSymbol btnSymbol btn-outline-warning cssBox">6</div>
 
         <div class = "col btn btnSymbol btnSymbol btn-outline-warning cssBox" >*</div>
     </div>
     <!-- 4 Row (3, 2, 1, /) -->
     <div class = "row p-1">
-        <div class = "col btn btnSymbol btn-outline-warning cssBox">3</div>
+        <div class = "col btn btnSymbol btn-outline-warning cssBox">1</div>
 
         <div class = "col btn btnSymbol btn-outline-warning cssBox">2</div>
 
-        <div class = "col btn btnSymbol  btn-outline-warning cssBox">1</div>
+        <div class = "col btn btnSymbol  btn-outline-warning cssBox">3</div>
 
         <div class = "col btn btnSymbol btn-outline-warning cssBox" >/</div>
     </div>
@@ -100,6 +100,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
 <script>
     $(".btnSymbol").click(function (e) {
 
